# psyctl

./: .gitignore  .pre-commit-config.yaml  .ruffignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
docs/: COMMUNITY.DATASETS.md  CONTRIBUTING.md  DATASET.BUILD.CAA.md  DATASET.BUILD.STEER.md  EXTRACT.STEERING.md  OPENROUTER.md  README.md  STEERING.md
docs/examples/: README.md
examples/: 01_dataset_local_model.py  02_dataset_openrouter_api.py  03_dataset_upload_hub.py  04_layer_analysis.py  05_end_to_end_simple.py  06_end_to_end_caa_korean.py  07_end_to_end_bipo_korean.py  dataset_generation_local.py  dataset_generation_openrouter.py  end_to_end_bipo.py  end_to_end_bipo_with_uploaded_dataset.py  end_to_end_caa.py  end_to_end_simple.py  generate_korean_extroversion.py  generate_korean_rudeness.py  layer_analysis_example.py
scripts/: build.ps1  e2e.bipo.ps1  e2e.caa.ps1  format.ps1  install-dev.ps1  test.ps1
src/psyctl/: __init__.py  cli.py  config.py
src/psyctl/commands/: __init__.py  benchmark.py  dataset.py  extract.py  layer.py  steering.py
src/psyctl/config/: __init__.py  settings.py
src/psyctl/core/: __init__.py  caa_dataset_loader.py  dataset_builder.py  hook_manager.py  inventory_tester.py  layer_accessor.py  layer_analyzer.py  logger.py  prompt.py  prompt_openrouter.py  steer_dataset_loader.py  steering_applier.py  steering_extractor.py  utils.py
src/psyctl/core/analyzers/: __init__.py  base.py  consensus.py  svm_analyzer.py
src/psyctl/core/extractors/: __init__.py  base.py  bipo.py  denoised_mean_difference.py  mean_contrastive.py  mean_difference.py  pca_caa.py
src/psyctl/data/: __init__.py  personality_templates.py
src/psyctl/data/inventories/: __init__.py  ipip_neo.py
src/psyctl/models/: __init__.py  llm_loader.py  openrouter_client.py  vector_store.py
src/psyctl/templates/: __init__.py  caa_question.j2  roleplay_prompt.j2
tests/: __init__.py  conftest.py  test_cli.py
tests/test_commands/: test_dataset.py  test_dataset_builder.py  test_dataset_upload.py  test_prompt.py
tests/test_core/: __init__.py  test_caa_dataset_loader_v3.py  test_hook_manager.py  test_hook_manager_padding.py  test_layer_accessor.py  test_layer_analyzer.py  test_steer_dataset_loader.py  test_steering_applier.py
tests/test_core/test_extractors/: __init__.py  test_bipo.py
