[project]
name = "psyctl"
version = "0.1.0"
description = "LLM Personality Steering Tool"
authors = [{name = "Rick Choi", email = "rick@caveduck.io"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0", # CLI 프레임워크
    "rich>=13.0.0", # 터미널 출력 개선
    "pydantic>=2.0.0", # 데이터 검증
    "torch>=2.0.0", # PyTorch
    "transformers>=4.30.0", # Hugging Face Transformers
    "safetensors>=0.3.0", # SafeTensors
    "datasets>=2.10.0", # Hugging Face Datasets
    "numpy>=1.24.0", # NumPy
    "pandas>=2.0.0", # Pandas
    "scikit-learn>=1.3.0", # Scikit-learn
    "matplotlib>=3.7.0", # Matplotlib
    "seaborn>=0.12.0", # Seaborn
    "loguru>=0.7.0", # 로깅
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
psyctl = "psyctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
